@@ -114,6 +114,7 @@
 #define OPT_GET_USER_ENV  0x16
 #define OPT_EXPORT        0x17
 #define OPT_CLUSTERS      0x18
+#define OPT_TIME_VAL      0x19
 
 /* generic getopt_long flags, integers and *not* valid characters */
 #define LONG_OPT_PROPAGATE   0x100
@@ -479,7 +480,7 @@ env_vars_t env_vars[] = {
   {"SBATCH_GET_USER_ENV",  OPT_GET_USER_ENV, NULL,             NULL          },
   {"SBATCH_EXPORT",        OPT_STRING,     &opt.export_env,    NULL          },
   {"SBATCH_REQ_SWITCH",    OPT_INT,        &opt.req_switch,    NULL          },
-  {"SBATCH_WAIT4SWITCH",   OPT_INT,        &opt.wait4switch,   NULL          },
+  {"SBATCH_WAIT4SWITCH",   OPT_TIME_VAL,   NULL,               NULL          },
 
   {NULL, 0, NULL, NULL}
 };
@@ -647,6 +648,9 @@ _process_env_var(env_vars_t *e, const char *val)
 			      optarg);
 			exit(1);
 		}
+		break;
+	case OPT_TIME_VAL:
+		opt.wait4switch = time_str2secs(val);
 		break;
 	default:
 		/* do nothing */
@@ -1650,7 +1654,7 @@ static void _set_options(int argc, char **argv)
 			if (pos_delimit != NULL) {
 				pos_delimit[0] = '\0';
 				pos_delimit++;
-				opt.wait4switch = time_str2mins(pos_delimit) * 60;
+				opt.wait4switch = time_str2secs(pos_delimit);
 			}
 			opt.req_switch = _get_int(optarg, "switches");
 			break;
