@@ -21,6 +21,7 @@ documents those changes that are of interest to users and admins.
  -- spank: Add callbacks in slurmd: slurm_spank_slurmd_{init,exit}
      and job epilog/prolog: slurm_spank_job_{prolog,epilog}
  -- spank: Add spank_option_getopt() function to api
+ -- Change resolution of switch wait time from minutes to seconds.
 
 * Changes in SLURM 2.4.0.pre4
 =============================
